--- a/03-devlinks/src/App.css
+++ b/03-devlinks/src/App.css
@@ -8,28 +8,29 @@
 
 :root {
   --bg-url: url(./img/bg-desktop.jpg);
-  --text-color: #fff;
-  --stroke-color: rgba(255, 255, 255, 0.5);
-  --surface-color: rgba(255, 255, 255, 0.1);
-  --surface-color-hover: rgba(255, 255, 255, 0.5);
-  --switch-bg-url: url(./img/MoonStars.svg);
-  --highlight-color: rgba(255, 255, 255, 0.2);
+  --text-color: rgb(170, 231, 223);
+    --stroke-color: rgba(32, 240, 213, 0.5);
+    --surface-color: rgba(32, 240, 213, 0.1);
+    --surface-color-hover: rgba(32, 240, 213, 0.2);
+    --switch-bg-url: url(./img/MoonStars.svg);
+    --highlight-color: rgba(32, 240, 213, 0.3);
 }
 
 .light {
   --bg-url: url(./img/bg-desktop-light.jpg);
-  --text-color: #000;
-  --stroke-color: rgba(0, 0, 0, 0.5);
-  --surface-color: rgba(0, 0, 0, 0.1);
-  --surface-color-hover: rgba(0, 0, 0, 0.5);
-  --switch-bg-url: url(./img/Sun.svg);
-  --highlight-color: rgba(0, 0, 0, 0.2);
+  --text-color: #006495;
+    --stroke-color: rgba(16, 66, 176, 0.5);
+    --surface-color: rgba(16, 66, 176, 0.1);
+    --surface-color-hover: rgba(16, 66, 176, 0.2);
+    --switch-bg-url: url(./img/Sun.svg);
+    --highlight-color: rgba(16, 66, 176, 0.3);
 }
 
 /* Modificações do body */
 #App * {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
+  list-style: none;
 }
 
 #App {
@@ -42,14 +43,14 @@
   max-width: 588px;
   margin: 0px auto 0px;
   padding: 0 24px;
-  padding-top: 56px;
+  padding-top: 15px;
 }
 
 #links ul {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 24px;
   padding: 24px;
 }
 
@@ -70,3 +71,4 @@
     --bg-url: url(./img/bg-mobile-light.jpg);
   }
 }
+
