--- a/03-devlinks/src/components/perfil/perfil.module.css
+++ b/03-devlinks/src/components/perfil/perfil.module.css
@@ -3,7 +3,7 @@
     padding: 24px;
 
 & img {
-    border: 4px solid rgba(146,146,146,0.8);
+    border: 2px solid var(--stroke-color);
     width: 112px;
     height: 112px;
     object-fit: cover;
