--- a/ativ-portfolio/src/components/card/Card.module.css
+++ b/ativ-portfolio/src/components/card/Card.module.css
@@ -47,7 +47,7 @@
   .card__title {
     margin: 0;
     font-size: 24px;
-    color: #E1A873;
+    color: #C0AF99;
     font-weight: 700;
   }
   
@@ -58,7 +58,7 @@
   .card__description {
     margin: 5px 0 0;
     font-size: 12px;
-    color: #C0AF99;
+    color: #f1f1f1;
     line-height: 1.4;
   }
   
